# OB_GINS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dataset/example/: ob_gins.yaml
scripts/: plot_navresult.py
src/: ob_gins.cc
src/common/: angle.h  crc32.cc  crc32.h  time.cc  time.hpp  types.h
src/factors/: marginalization_factor.h  marginalization_info.h
src/fileio/: adisbinaryloader.hpp  adisfileloader.cc  adisfileloader.hpp  pppfileloader.cc  pppfileloader.hpp  pvtfileloader.hpp
